fixed layout issue where second page+ of albums images were aligned with header

--- a/GoldenGate/Resources/PhotoGallery.css
+++ b/GoldenGate/Resources/PhotoGallery.css
@@ -153,11 +153,6 @@
     content: '';
 }
 
-.albumDetailHeader + .albumItem
-{
-    clear: both;
-}
-
 .galleryPager
 {
     clear: both;
@@ -208,4 +203,9 @@
     float: right;
     font-weight: normal;
     margin: 2px 2px;
+}
+
+.albumClear 
+{
+    clear: both;
 }
